feat[sub-user]: added sub-user list api
